main styles, about styles, covers style fixes

--- a/src/css/layout/about.css
+++ b/src/css/layout/about.css
@@ -1,7 +1,3 @@
-.hide {
-    display: none;
-}
-
 .bg-color {
     background: var(--main-color);
 }
